# medimg_pipeline

./: .gitignore  LICENSE  README.md  environment-gpu.yml  environment-macos.yml  environment.yml  pyproject.toml
config/: config_dicom.yaml  config_nifti.yaml
create_dummy/: create_dummy_dicom.py  create_dummy_nifti.py
medimg_pipeline/: cli.py  config.py  pipeline.py
medimg_pipeline/core/: exceptions.py  volume.py
medimg_pipeline/io/: dicom.py  nifti.py  peek.py  writers.py
medimg_pipeline/models/: base.py  dummy.py  monai.py  nnunet.py  pytorch.py
medimg_pipeline/postprocess/: components.py  threshold.py
medimg_pipeline/transforms/: normalize.py  orientation.py  resample.py
medimg_pipeline/utils/: paths.py
medimg_pipeline/visualize/: overlay.py
