[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medimg_pipeline"
version = "0.1.0"
description = "YAML-configured CLI for reproducible 3D medical image inference pipelines with NIfTI and DICOM support."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "Sayaka Iwano" }
]
dependencies = [
  "pyyaml>=6.0",
  "pydantic>=2.0",
  "typer>=0.12",
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "nibabel>=5.0",
  "SimpleITK>=2.3",
]

[project.scripts]
medimg-pipeline = "medimg_pipeline.cli:app"

[tool.setuptools.packages.find]
include = ["medimg_pipeline*"]